# curved_space_render_engine

./: .gitignore  CMakeLists.txt
black_hole_shader/: main.cpp
engine_core/: CMakeLists.txt
engine_core/include/: glfw_render.h
examples/black_hole_shader/: CMakeLists.txt
examples/engine_core_examples/: CMakeLists.txt  color_check.cpp
examples/model_reconstruction/: CMakeLists.txt  main.cpp
examples/model_render_core_example/: CMakeLists.txt  main.cpp
examples/mrc_texture_example/: CMakeLists.txt  main.cpp
examples/mrc_texture_example/objects/: rock.mtl
examples/triangle_lightning_example/: CMakeLists.txt  main.cpp  tri.mtl
model_reconstruction/: CMakeLists.txt  main.cpp  snapshot.h
model_render_core/: CMakeLists.txt
model_render_core/include/: compute_normals.h  light_source.h  main_pipeline.h  model.h  point_projection.h  polygon_distance.h  scene_cache.h
model_render_core/include/model/: io.h  material.h  texture.h
model_render_core/include/utils/: graphics_tools.h  point_projection.h  vertices_transform.h
model_render_core_example/: CMakeLists.txt  main.cpp
mrc_texture_example/: main.cpp  plane.mtl
mrc_texture_example/objects/: rock.mtl
ray_marching_core/: CMakeLists.txt
ray_marching_core/include/: internal.h  ray_marching_iterator.h  ray_marching_params.h  ray_marching_result.h
ray_marching_core/include/curvature/: icurvature.h  spherical_curvature.h
ray_marching_core/include/object/: iobject.h  sphere.h
ray_marching_core/include/shading/: material.h
shader_core/: CMakeLists.txt
shader_core/include/: entry_point.h  glfw_render.h
shader_core/include/camera/: camera_view.h  camera_view_iterator.h
shader_core/include/utils/: mat.h  vec.h
shader_core_examples/: CMakeLists.txt
triangle_lightning_example/: CMakeLists.txt  main.cpp
